select popups render incorrectly after scrolling
Categories
(Core :: Widget: Gtk, defect, P1)
Tracking
()
Tracking | Status | |
---|---|---|
firefox-esr60 | --- | unaffected |
firefox-esr68 | --- | unaffected |
firefox67 | --- | unaffected |
firefox68 | --- | unaffected |
firefox69 | + | fixed |
firefox70 | + | fixed |
People
(Reporter: heycam, Assigned: jhorak)
References
(Regression)
Details
(Keywords: regression)
Attachments
(3 files, 1 obsolete file)
60.92 KB,
image/png
|
Details | |
70.39 KB,
image/png
|
Details | |
47 bytes,
text/x-phabricator-request
|
RyanVM
:
approval-mozilla-beta+
|
Details | Review |
mozregression tells me this is a regression from bug 1546343.
STR:
- Open https://forums.whirlpool.net.au/forum/133.
- Click on the "Group:"
<select>
. - With the mouse over the select popup, scroll the mouse wheel down.
If you have a <select>
with enough items to be scrollable, then scrolling the popup with the mouse wheel (or with the arrow keys), results in the currently selected option not having the normal highlight color painted behind it, and the scrollbar also stops rendering.
I am on Linux Mint 18.3. I have a 2dppx display, which might be relevant.
Jan, could you take a look at this?
Reporter | ||
Updated•2 years ago
|
Reporter | ||
Comment 1•2 years ago
|
||
Reporter | ||
Comment 2•2 years ago
|
||
Reporter | ||
Comment 3•2 years ago
|
||
[Tracking Requested - why for this release]:
Regression in usability of a commonly used form control on Linux.
Updated•2 years ago
|
![]() |
||
Comment 4•2 years ago
|
||
This seems like a pretty bad regression on Linux. Martin, any chance one of you two could take a look?
Changing the priority to p1 as the bug is tracked by a release manager for the current beta.
See What Do You Triage for more information
Assignee | ||
Comment 7•2 years ago
|
||
Pre GTK 3.22 releases does not show hidpi widget pixmaps correctly.
Assignee | ||
Comment 8•2 years ago
|
||
Looks like Mint's GTK 3.18 is too old for hidpi widgets. Lets set minimal gtk version same as Wayland (gtk 3.22).
Updated•2 years ago
|
Pushed by ccoroiu@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/1ff41c3c844d
Don't scale widget pixmaps on older than GTK 3.22, r=stransky
Comment 10•2 years ago
|
||
bugherder |
Comment 11•2 years ago
|
||
Please nominate this for Beta approval when you get a chance.
Assignee | ||
Comment 12•2 years ago
|
||
Comment on attachment 9077390 [details]
Bug 1562555 Don't scale widget pixmaps on older than GTK 3.22, r=stransky
Beta/Release Uplift Approval Request
- User impact if declined: On distros with too old gtk 3 (like LTS) and on hidpi displays there's a chance of regression regarding combobox scrollbars missing thumb indicator.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: Yes
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Low
- Why is the change risky/not risky? (and alternatives if risky): No risk, because the code which introduced regression is disabled for the affected gtk versions.
- String changes made/needed:
Comment 13•2 years ago
|
||
I'm a little confused by the commit message and code change. I was seeing the rendering corruption with gtk 3.24.8 (see Bug 1559051), which does not jive with the comments about this being a gtk < 3.22.0 problem.
This commit does fix the problem for me, but I think that is because useHiDPIWidgets is being set back to false for me. gtk_check_version returns NULL if the runtime gtk version is compatible, so the added version check would only be true for gtk < 3.22.0.
Reading through the previous commits, I was under the impression that useHiDPIWidgets=true was the new functionality. So it would seem that it's still broken, but just disabled again.
... unless I'm completely misinterpreting what's going on.
Assignee | ||
Updated•2 years ago
|
Assignee | ||
Comment 14•2 years ago
|
||
(In reply to Matthew Turnbull [Bluefang] from comment #13)
I'm a little confused by the commit message and code change. I was seeing the rendering corruption with gtk 3.24.8 (see Bug 1559051), which does not jive with the comments about this being a gtk < 3.22.0 problem.
This commit does fix the problem for me, but I think that is because useHiDPIWidgets is being set back to false for me. gtk_check_version returns NULL if the runtime gtk version is compatible, so the added version check would only be true for gtk < 3.22.0.
Reading through the previous commits, I was under the impression that useHiDPIWidgets=true was the new functionality. So it would seem that it's still broken, but just disabled again.
... unless I'm completely misinterpreting what's going on.
Yes, you're right. I need to revisit the changes.
Updated•2 years ago
|
Assignee | ||
Comment 16•2 years ago
|
||
Updated•2 years ago
|
Updated•2 years ago
|
Updated•2 years ago
|
Updated•2 years ago
|
Updated•2 years ago
|
Comment 17•2 years ago
|
||
Pushed by archaeopteryx@coole-files.de:
https://hg.mozilla.org/integration/autoland/rev/64200237b839
Disable hidpi widget rendering for now on X11 because it's buggy;r=stransky
Comment 18•2 years ago
|
||
bugherder |
Comment 19•2 years ago
|
||
Please nominate this for Beta approval when you get a chance.
Assignee | ||
Comment 20•2 years ago
|
||
Comment on attachment 9080545 [details]
Bug 1562555 Disable hidpi widget rendering for now on X11 because it's buggy;r=stransky
Beta/Release Uplift Approval Request
- User impact if declined: The scrollbar thumb won't be visible during scrolling on Xorg hidpi dislays.
Both patches in this bugs needs to be applied in chronological order for smooth applying this revert.
- Is this code covered by automated tests?: No
- Has the fix been verified in Nightly?: No
- Needs manual test from QE?: No
- If yes, steps to reproduce:
- List of other uplifts needed: None
- Risk to taking this patch: Medium
- Why is the change risky/not risky? (and alternatives if risky):
- String changes made/needed:
Comment 21•2 years ago
|
||
Comment on attachment 9080545 [details]
Bug 1562555 Disable hidpi widget rendering for now on X11 because it's buggy;r=stransky
Fixes broken HiDPI widget rendering on X11 systems. Approved for 69.0b10. Note that both csets from this bug need to be uplifted.
![]() |
||
Comment 22•2 years ago
|
||
bugherderuplift |
Description
•