Bug 1562555 Don't scale widget pixmaps on older than  GTK 3.22, r=stransky a=RyanVM

Pre GTK 3.22 releases does not show hidpi widget pixmaps correctly.

Differential Revision: https://phabricator.services.mozilla.com/D37724